--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/*
+/* */
 Colors:
 
 Text: 1A1A1A
@@ -9,12 +9,33 @@ White: #FFF
 margin 0;
 padding 0;
 font-family: sans-rerif;
+box-sizing: border-box;
 }
+
+
+/** tag selectors*/
+a { 
+    text-decoration: none;
+}
+
+body {
+    padding-top: 60px;
+}
+
+/** los selectores de clase respetando en lo que pueda la estructura */
 
 navbar {
 display: flex;
 justify-content: space-bewtween;
+align-items: center;
 background-color: white;
+color: #1A1A1A;
+position: fixed;
+top: 0px;
+width: 100%;
+}
+
+
 
 
 /**--------- header ------- */
