--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,18 @@ body {
 
 /** los selectores de clase respetando en lo que pueda la estructura */
 
-navbar {
+.navbar__logo {
+    width: 33%;
+}
+
+header {
+    display: flex;
+    width: 100%;
+    height: 100px;
+
+}
+
+.navbar {
 display: flex;
 justify-content: space-bewtween;
 align-items: center;
@@ -35,8 +46,17 @@ top: 0px;
 width: 100%;
 }
 
+.feature {
+
+}
+.navbar__logo {
+    width: 200px;
+}
 
 
+.backgroundimage {
+
+}
 
 /**--------- header ------- */
 
