--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ justify-content: center;
     margin: 2rem 0;
 }
 
-spotify__title {
+.spotify__title {
     text-align: center;
     text-decoration: underline;
     text-decoration-color: #00B172;
@@ -83,10 +83,36 @@ spotify__title {
     text-underline-offset: 10px;
 }
 
-.column h2 {
-    text-decoration: underline 1px green;
-
+.features {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin-top: 2rem;
 }
+
+.features article {
+    flex: 1 0 0;
+    max-width: 250px;
+    padding-top: 60px;
+}
+
+.features article h3 {
+    color: #00B172;
+}
+
+.features__songs {
+background: white url(../images/music-icon.png) no-repeat center top / 75px;
+}
+
+.features__music {
+    background: white url("../images/high-quality-icon.png") no-repeat center top / 75px;
+}
+
+.features__stream {
+    background: white url("../images/devices-icon.png") no-repeat center top / 75%;
+}
+
+
 
 /**--------- header ------- */
 .footer {
